# os

./: Cargo.toml  LICENSE.md  README.md  build.rs  build.sh  rust-toolchain.toml
.cargo/: config.toml
kernel/: Cargo.toml
kernel/lib/: Cargo.toml
kernel/lib/src/: cmos.rs  lib.rs  serial.rs
kernel/lib/src/output/: serial.rs
kernel/lib/src/output/framebuffer/: frame_buffer.rs  mod.rs  print.rs
kernel/lib/src/system/: mod.rs  physical_memory.rs
kernel/lib/src/system/acpi/: fadt.rs  init.rs  local_apic.rs  mod.rs  rsdp.rs  sdt.rs  signatures.rs  xsdt.rs
kernel/lib/src/system/acpi/local_apic/: mod.rs  timer.rs
kernel/lib/src/system/acpi/madt/: ics.rs  mod.rs
kernel/lib/src/system/acpi/madt/ics/: mod.rs  structures.rs
kernel/lib/src/system/exit/: qemu.rs
kernel/lib/src/system/interrupts/: handlers.rs  idt.rs  mod.rs  pic.rs
kernel/lib/src/system/interrupts/handlers/: faults.rs
kernel/lib/src/system/interrupts/tables/: gdt.rs  idt.rs  mod.rs  rsdp_table.rs
kernel/lib/src/time/: cmos.rs  datetime.rs  delay.rs  mod.rs
kernel/lib/src/utils/: convert.rs  deadlock.rs  mod.rs
kernel/src/: lib.rs  main.rs
src/: main.rs
vga/: Cargo.toml
vga/src/: colour.rs  lib.rs  print.rs  writer.rs
